<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:id="@+id/statistics_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="You have no tasks."
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/stats_active_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="1dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/stats_completed_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="1dp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </LinearLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>